[package]
name = "qp-rs"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Lance Fuller <matthewlancefuller@gmail.com>"]
readme = "README.md"
license = "Apache-2.0/MIT"
description = "A Rust wrapper for Quantum Leaps' Quantum Platform."
documentation = "https://docs.rs/qp-rs"
repository = "https://github.com/massivelivefun/qp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
